Bug 395711 - External images not loaded by default if message was opened in a separate window
Summary: External images not loaded by default if message was opened in a separate window
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.8.3
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 395657 395733 399043 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-06-21 23:06 UTC by boospy
Modified: 2022-08-11 15:33 UTC (History)
20 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 22.08.0
Sentry Crash Report:


Attachments
Kmail screenshot (57.94 KB, image/png)
2018-12-05 14:23 UTC, Bart
Details

Note You need to log in before you can comment on or make changes to this bug.
Description boospy 2018-06-21 23:06:33 UTC
Since last Update i have to click on every mail that i would like to allow display pictures from outside in Kontact. Imean this message:
Note: This HTML message may contain external references to images etc. For security/privacy reasons external references are not loaded. If you trust the sender of this message then you can load the external references for this message by clicking here.
In Confguration this is allowd, also i found the right set option in the configfile: "kmail2rc:htmlMail=true" and "htmlLoadExternal=true"
So where i have to set to allow pictures in HTML Mails to load from the internet?

Kontactversion 5.8.1

After the Upgrade to 5.8.2 the problem still exist. So i search for some solution. If you are on a folder like "inbox" you have to click on folder and uncheck "load external references". So if you uncheck it will loading the images, and if you check the images will be blocked.There is probably something reversed.

Best Regards
Comment 1 lod 2018-07-16 15:41:14 UTC
I have the same behavior since KMail 5.8.1 and it still exists in KMail 5.8.3
Comment 2 Richard Bos 2018-07-24 06:48:57 UTC
boospy: can you describe better where to find the "load external references"?
For example with a screenshot.
I ask because I can't find the setting you're referring to.  

Hmm, I found it now: it's the menu folder in the main menu (on top of kmail) and
not on the folder itself.  In my case "load external references" is grayed out.
Comment 3 Rafael Kitover 2018-08-20 16:30:38 UTC
I have this problem in kmail 5.8.3, Gentoo 17.1 KDE profile, exactly as described.

Richard: you may need to enable "Configure Kmail" -> Security -> Allow messages to load external references
for the folder option to be available.
Comment 4 Richard Bos 2018-08-20 17:28:01 UTC
Funny, I just wanted to report this issue (again) ;)

Because I installed the new KDE (18.08) on a virtual machine and in this 
virtual machine I have this issue.  Not on my current KDE desktop.

I've the "Configure Kmail" -> Security -> Allow messages to load external references, this enabled.

Full story:

Current desktop / kmail version:
kmail-17.12.3
openSUSE Leap 15.0

In this version HTML emails are shown correctly (at least the way I want it to be).

I created a virtual machine with openSUSE Leap 15.0
copied my .local/share .config and .kde4 directories to the virtual machine

All worked as expected.

Update KDE to 18.08 with kmail version:
kmail-18.08.0

This version shows the issue.  It's an issue (bug?) in the new kmail version.

I heard more people about this, I hope that this gets fixed before the offical release.

Is this ticket on the list with issues to be solved before release?
Comment 5 dharman 2018-08-30 09:45:41 UTC
I can confirm this bug.
I'm using KDE neon

Just an additional info:
using the described workaround on "INBOX" the external resources are loaded. Re-enabling the checkbox, the external resources continue to be enabled. 
Different behavior in subfolders, where resources are loaded only with workaround applied
Comment 6 Steven Robbins 2018-10-17 03:40:34 UTC
Still present with kmail Version 5.9.1
Comment 7 Nikolai D. 2018-10-22 09:03:23 UTC
Same 

Kmail: 5.9.2

OS: Antergos Linux 
KDE-Plasma-Version: 5.14.1
Qt-Version: 5.11.2
KDE-Frameworks-Version: 5.51.0
Kernel-Version: 4.18.14-arch1-1-ARCH
Comment 8 Pierre Ducroquet 2018-10-22 17:51:19 UTC
*** Bug 399043 has been marked as a duplicate of this bug. ***
Comment 9 Pierre Ducroquet 2018-10-22 17:51:44 UTC
*** Bug 395657 has been marked as a duplicate of this bug. ***
Comment 10 Pierre Ducroquet 2018-10-22 17:52:41 UTC
*** Bug 395733 has been marked as a duplicate of this bug. ***
Comment 11 Laurent Montel 2018-10-30 08:16:28 UTC
Git commit e17b0461c3c0bba4c317c26db6977dfab2195920 by Laurent Montel.
Committed on 30/10/2018 at 08:15.
Pushed by mlaurent into branch 'Applications/18.08'.

Fix Bug 395711 - Since last Update kmail didn't load external images anymore

FIXED-IN: 5.9.3

M  +17   -5    src/kmmainwidget.cpp
M  +1    -0    src/kmmainwidget.h

https://commits.kde.org/kmail/e17b0461c3c0bba4c317c26db6977dfab2195920
Comment 12 Bart 2018-11-23 11:08:01 UTC
Stil exists in 5.9.3 in KDE Neon (Ubuntu 18.04)
Comment 13 Laurent Montel 2018-11-23 13:00:17 UTC
Verify if you don't have 2 contacts with same address.

It's fixed verified here.
Comment 14 Bart 2018-12-05 14:23:51 UTC
Created attachment 116686 [details]
Kmail screenshot

As you can see in attachment, still not working correctly, even with one entry in contacts.
Comment 15 Aurélien Murith 2018-12-05 18:36:00 UTC
In fact, it works as long as you read your message in the main window, but if you open it in a separate window by double-clicking on it, the bug is still present.
Comment 16 Allen Winter 2018-12-05 18:49:39 UTC
confirmed
Comment 17 Unknown 2018-12-05 19:19:54 UTC
confirmed

greeting
Comment 18 Bart 2018-12-06 09:06:40 UTC
(In reply to Aurélien Murith from comment #15)
> In fact, it works as long as you read your message in the main window, but
> if you open it in a separate window by double-clicking on it, the bug is
> still present.

In my machine even in main window not working correctly :/
Comment 19 Christian Wolf 2019-09-10 14:35:18 UTC
I think I am also affected by this bug. I disabled HTML and external references by default (I get much spam so I want to allow references only for specified origins) and click on the warning message on enable HTML manually. However I am not always asked for confirmation that the external references should be loaded.

You might try to press <Ctrl><Shift><R> to load the external references (or whatever you shortcut you configured). This loaded all images instantly.
Comment 20 itsjustarumour 2019-12-14 17:46:17 UTC
Still having this problem.

KDE Neon 18.04

KMail Version 5.12.3

KDE Frameworks 5.65.0

Qt 5.13.2 (built against 5.13.2)

The xcb windowing system
Comment 21 Tim Folger 2020-01-02 18:33:52 UTC
I'm having the same problem. Kontact version 5.13.0 with opensuse tumbleweed, running plasma 5.17.4, KDE frameworks 5.65.0, Qt version 5.13.1, kernel 5.3.12-2

I have checked both "Prefer html to plain text" and "Allow messages to load external references from the Internet" in kmail's security settings but every time I open an html message I get this warning: "Note: This HTML message may contain external references to images etc. For security/privacy reasons external references are not loaded. If you trust the sender of this message then you can load the external references for this message by clicking here."
Comment 22 Tim Folger 2020-02-22 18:50:29 UTC
This annoying problem is still present with plasma 5.18.0 and Kontact version 5.13.2 on opensuse tumbleweed.
Comment 23 Tim Folger 2020-02-22 22:23:41 UTC
Just to add a bit more info: The message preview pane works as expected. That is, it loads external images for html messages. But if you double-click on a message to open a separate window, the message window fails to load the external images.
Comment 24 null 2020-05-06 17:29:01 UTC
Folder-specific settings and global defaults regarding external images should now be working fine in general as of KMail 5.14.1.

Only messages opened in a separate window as noted in Comment 23 still require manually confirming the warning. Findings:
- this only happens if global defaults are used
- for folder-specific settings it works fine (global defaults have to be unchecked then, though)
Comment 25 Michael Freeman 2022-08-10 07:29:31 UTC
Is this expected behaviour or a bug then ? In my 4:21.12.3-0ubuntu1 kmail version the preview pane loads everything as expected. But why is opening a separate window (double clicking on an email) getting this separate behaviour ?
Comment 26 Laurent Montel 2022-08-10 07:50:27 UTC
For me it's a bug.
I will work on it after lunch
Comment 27 Michael Freeman 2022-08-10 09:50:12 UTC
Sounds good. Have a good lunch !
Comment 28 Laurent Montel 2022-08-10 12:21:56 UTC
Git commit f894cffa2b7ea91b86bc7754e6dd51495de312d3 by Laurent Montel.
Committed on 10/08/2022 at 12:21.
Pushed by mlaurent into branch 'release/22.08'.

Fix 395711:  External images not loaded by default if message was opened in a separate window

FIXED-IN: 22.08.0

M  +9    -7    src/kmmainwidget.cpp

https://invent.kde.org/pim/kmail/commit/f894cffa2b7ea91b86bc7754e6dd51495de312d3
Comment 29 Bart 2022-08-10 15:58:36 UTC
Four years after reporting it, I really appreciate it, really really no malice :D
Comment 30 Michael Freeman 2022-08-10 16:16:52 UTC
Same here. Much appreciated :)
Comment 31 Richard Bos 2022-08-11 15:33:14 UTC
One more thank you.