Fix Bug 395711 - Since last Update kmail didn't load external images anymore

FIXED-IN: 5.9.3
BUG: 395711