src/kmmainwidget.h
@@ -210,6 +210,7 @@ protected:
     void showEvent(QShowEvent *event) override;
 
 private:
+    void assignLoadExternalReference();
     KMail::MessageActions *messageActions() const;
 
     KActionMenu *filterMenu() const;
